Add CSS styles for the page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Zureyma Quetzaili Manrique Santiago | WDD130</title> 
+    <meta name="description" content="This a page made on WWD 130 - Web Fundamentals and it is about its author: Zureyma Manrique">
+    <meta name="author" content="Zureyma Quetzaili Manrique Santiago">
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <header>
@@ -14,11 +17,21 @@
     </header>
     <main>
         <h1>Zureyma Quetzaili Manrique Santiago | WDD 130</h1>
-        <img src="images/profile.png" alt="Zureyma's profile photo" width="200">
-        <p>Hello! My name is Zureyma Manrique and I'm from Mexico. 
-        I started my programming career when I was 18 years old, but I put it aside because I left to serve a mission in Monterrey, Mexico. 
-        I came back in May 2024 since then, I decided to start my degree related to programming..</p>
+        <div class="profile">
+          <img src="images/profile.png" alt="Zureyma's profile photo" width="200">
+          <p>Hello! My name is Zureyma Manrique and I'm from Mexico. 
+          I started my programming career when I was 18 years old, but I put it aside because I left to serve a mission in Monterrey, Mexico. 
+          I came back in May 2024 since then, I decided to start my degree related to programming..</p>
+        </div>
     </main>
+      <h2>Mexico</h2>
+      <div class="profile">
+        <img src="images/mexico.jpeg" alt="Mexico example photo" width="200">
+        <p>I am from Mexico. So I'd like to speak a little bit more about my country. 
+          Mexico is a North American country known for its rich history, diverse culture, and varied landscapes. 
+          It boasts a heritage shaped by ancient civilizations and Spanish colonial rule, with a vibrant mix of traditions, languages, and cuisines.
+        </p>
+      </div>
     <footer>
         <p>&copy;2025 Zureyma Quetazili Manrique Santiago &#10070; Tecamac, Mexico</p>
     </footer>
