fix css in html

--- a/index.html
+++ b/index.html
@@ -24,14 +24,16 @@
           I came back in May 2024 since then, I decided to start my degree related to programming..</p>
         </div>
     </main>
-      <h2>Mexico</h2>
-      <div class="profile">
-        <img src="images/mexico.jpeg" alt="Mexico example photo" width="200">
-        <p>I am from Mexico. So I'd like to speak a little bit more about my country. 
-          Mexico is a North American country known for its rich history, diverse culture, and varied landscapes. 
-          It boasts a heritage shaped by ancient civilizations and Spanish colonial rule, with a vibrant mix of traditions, languages, and cuisines.
-        </p>
-      </div>
+      <aside>
+        <h2>Mexico</h2>
+        <div class="profile">
+          <img src="images/mexico.jpeg" alt="Mexico example photo" width="200">
+          <p>I am from Mexico. So I'd like to speak a little bit more about my country. 
+            Mexico is a North American country known for its rich history, diverse culture, and varied landscapes. 
+            It boasts a heritage shaped by ancient civilizations and Spanish colonial rule, with a vibrant mix of traditions, languages, and cuisines.
+          </p>
+        </div>
+      </aside>
     <footer>
         <p>&copy;2025 Zureyma Quetazili Manrique Santiago &#10070; Tecamac, Mexico</p>
     </footer>
