adjust to wirefrime

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -32,18 +32,53 @@
             </article>
         </div>
 
-        <section>
+        <section class="history">
             <h2>History</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis egestas rhoncus. Donec facilisis fermentum sem, ac viverra ante luctus vel.</p>
+            <div class="history-content">
+                <div class="history-text">
+                    <p>From our humble beginnings in 1998, when a group of river-loving friends decided to share their passion for white water, White Water Rafting Co. has grown to become a benchmark in rafting adventures. What started with a single raft and the dream of exploring every rapid of the Salto River quickly transformed into a company dedicated</p>
+                </div>
+                <img src="images/history.jpeg" alt="Company History" class="history-image">
+                <div class="history-text">
+                    <p>to offering unforgettable experiences. Over the years, we have expanded our fleet, trained the most experienced guides, and discovered new routes, but our mission remains the same: to provide safe, thrilling, and nature-respecting adventures, creating lifelong memories for each of our clients.</p>
+                </div>
+            </div>
         </section>
 
-        <section>
+        <section class="adventures">
             <h2>Adventure Awaits You!</h2>
-            <img src="images/rafting1.jpg" alt="Rafting Adventure 1">
-            <img src="images/rafting2.jpg" alt="Rafting Adventure 2">
-            <img src="images/rafting3.jpg" alt="Rafting Adventure 3">
-            <img src="images/rafting4.jpg" alt="Rafting Adventure 4">
-            <img src="images/rafting5.jpg" alt="Rafting Adventure 5">
+            <div class="adventure-grid">
+                <div class="adventure-item">
+                    <figure>
+                        <img src="images/rafting1.jpg" alt="Los Dientes del Diablo Rapids">
+                        <figcaption>Los Dientes del Diablo</figcaption>
+                    </figure>
+                </div>
+                <div class="adventure-item">
+                    <figure>
+                        <img src="images/rafting2.jpg" alt="Big Mallard Rapids">
+                        <figcaption>Big Mallard</figcaption>
+                    </figure>
+                </div>
+                <div class="adventure-item">
+                    <figure>
+                        <img src="images/rafting3.jpg" alt="Half Day Adventure">
+                        <figcaption>Half Day Adventure</figcaption>
+                    </figure>
+                </div>
+                <div class="adventure-item">
+                    <figure>
+                        <img src="images/rafting4.jpg" alt="Rapids Challenge">
+                        <figcaption>Rapids Challenge</figcaption>
+                    </figure>
+                </div>
+                <div class="adventure-item">
+                    <figure>
+                        <img src="images/rafting5.jpg" alt="Canyon Explorer">
+                        <figcaption>Canyon Explorer</figcaption>
+                    </figure>
+                </div>
+            </div>
         </section>
     </main>
 
