--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title>Rafting site</title> 
-        <meta name="description" content="Rafting Site | WWD 130 - Web Fundamentals">
+        <title>Rafting Site | WWD 130 - Web Fundamentals</title> 
+        <meta name="description" content="This is Rafting Site simulating a company. This was created by Zureyma for Web Fundamentals">
         <meta name="author" content="Zureyma Quetzaili Manrique Santiago">
         <link rel="stylesheet" href="styles/rafting.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
