--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title>Rafting Site | WWD 130 - Web Fundamentals</title> 
+        <title>Rafting Site | About Us</title> 
         <meta name="description" content="This is Rafting Site simulating a company. This was created by Zureyma for Web Fundamentals">
         <meta name="author" content="Zureyma Quetzaili Manrique Santiago">
         <link rel="stylesheet" href="styles/rafting.css">
