add wirefrime link

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -142,7 +142,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 White Water Rafting Co. | <a href="site-plan-rafting.html">Site Plan</a> | <a href="contact-wireframe.html">Contact Wireframe</a> | Zureyma Quetzaili Manrique Santiago</p>
+        <p>&copy; 2025 White Water Rafting Co. | <a href="site-plan-rafting.html">Site Plan</a> | <a href="https://app.moqups.com/SWuQPH4e2ngU1BX5M9ybFdbHIaGzstoY/view/page/ad12de680">Contact Wireframe</a> | Zureyma Quetzaili Manrique Santiago</p>
         <nav class="socialmedia" aria-label="Social media links">
             <ul>
                 <li><a href="https://facebook.com" aria-label="Facebook"><img src="images/facebook.png" alt="Facebook icon" width="32" height="32"></a></li>
