--- a/wwr/about.html
+++ b/wwr/about.html
@@ -38,14 +38,14 @@
             </article>
         </div>
 
-        <section class="history" aria-labelledby="history-heading">
+        <section class="history card-section" aria-labelledby="history-heading">
             <h2 id="history-heading">Our History</h2>
-            <div class="history-content">
+            <div class="history-content grid-2">
                 <div class="history-text">
                     <p>From our humble beginnings in 1998, when a group of river-loving friends decided to share their passion for white water, White Water Rafting Co. has grown to become a benchmark in rafting adventures. What started with a single raft and the dream of exploring every rapid of the Salto River quickly transformed into a company dedicated</p>
                 </div>
                 <figure class="history-image">
-                    <img src="images/history.jpeg" alt="Our original rafting team in 1998" width="500" height="300">
+                    <img src="images/history.jpeg" alt="Our original rafting team in 1998" class="circle-img responsive-img">
                     <figcaption>Our founding team in 1998</figcaption>
                 </figure>
                 <div class="history-text">
@@ -56,9 +56,9 @@
 
         <section class="adventures" aria-labelledby="adventures-heading">
             <h2 id="adventures-heading">Adventure Awaits You!</h2>
-            <div class="adventure-grid">
+            <div class="adventure-grid grid-auto">
                 <figure class="adventure-item">
-                    <img src="images/rafting1.jpg" alt="Exciting rapids at Los Dientes del Diablo" width="300" height="200">
+                    <img src="images/rafting1.jpg" alt="Exciting rapids at Los Dientes del Diablo" class="responsive-img>
                     <figcaption>Los Dientes del Diablo</figcaption>
                     <p class="difficulty">Difficulty: Advanced</p>
                 </figure>
@@ -91,7 +91,7 @@
         <nav class="socialmedia" aria-label="Social media links">
             <ul>
                 <li><a href="https://facebook.com" aria-label="Facebook"><img src="images/facebook.png" alt="Facebook icon" width="32" height="32"></a></li>
-                <li><a href="https://x.com" aria-label="Twitter"><img src="images/twitter.jpg" alt="Twitter icon" width="32" height="32"></a></li>
+                <li><a href="https://x.com" aria-label="Twitter"><img src="images/twitter.png" alt="Twitter icon" width="32" height="32"></a></li>
                 <li><a href="https://instagram.com" aria-label="Instagram"><img src="images/instagram.png" alt="Instagram icon" width="32" height="32"></a></li>
             </ul>
         </nav>
