--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -39,9 +39,9 @@
             </article>
         </div>
 
-        <section class="contact-info" aria-labelledby="contact-heading">
+        <section class="contact-info card-section" aria-labelledby="contact-heading">
             <h2 id="contact-heading">Get In Touch</h2>
-            <div class="contact-details">
+            <div class="contact-details grid-2">
                 <div class="company-info">
                     <h3>Company Information</h3>
                     <address>
@@ -53,7 +53,7 @@
                     </address>
                 </div>
                 
-                <div class="map-container">
+                <div class="map-container grid-center">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.3207396914147!2d-74.00597908459418!3d40.74844797932847!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259a9b3117469%3A0xd134e199a405a163!2sEmpire%20State%20Building!5e0!3m2!1sen!2sus!4v1633024800000!5m2!1sen!2sus" 
                             width="400" 
                             height="300" 
@@ -68,23 +68,23 @@
 
         <section class="employees" aria-labelledby="employees-heading">
             <h2 id="employees-heading">Meet Our Team</h2>
-            <div class="employee-grid">
+            <div class="employee-grid grid-2">
                 <figure class="employee-item">
-                    <img src="images/employee1.png" alt="Sarah Johnson, Lead Guide" width="200" height="200">
+                    <img src="images/employee1.png" alt="Sarah Johnson, Lead Guide" width="200" height="200" class="circle-img">
                     <figcaption>
                         <strong>Sarah Johnson</strong><br>
                         Lead Rafting Guide
                     </figcaption>
                 </figure>
                 <figure class="employee-item">
-                    <img src="images/employee2.png" alt="Mike Rodriguez, Safety Coordinator" width="200" height="200">
+                    <img src="images/employee2.png" alt="Mike Rodriguez, Safety Coordinator" width="200" height="200" class="circle-img">
                     <figcaption>
                         <strong>Mike Rodriguez</strong><br>
                         Safety Coordinator
                     </figcaption>
                 </figure>
                 <figure class="employee-item">
-                    <img src="images/employee3.png" alt="Emma Chen, Customer Service Manager" width="200" height="200">
+                    <img src="images/employee3.png" alt="Emma Chen, Customer Service Manager" width="200" height="200" class="circle-img">
                     <figcaption>
                         <strong>Emma Chen</strong><br>
                         Customer Service Manager
@@ -93,7 +93,7 @@
             </div>
         </section>
 
-        <section class="contact-form" aria-labelledby="form-heading">
+        <section class="contact-form card-section" aria-labelledby="form-heading">
             <h2 id="form-heading">Send Us a Message</h2>
             <form method="post" action="/submit-contact">
                 <div class="form-group">
