--- a/wwr/about.html
+++ b/wwr/about.html
@@ -58,7 +58,7 @@
             <h2 id="adventures-heading">Adventure Awaits You!</h2>
             <div class="adventure-grid grid-auto">
                 <figure class="adventure-item">
-                    <img src="images/rafting1.jpg" alt="Exciting rapids at Los Dientes del Diablo" class="responsive-img>
+                    <img src="images/rafting1.jpg" alt="Exciting rapids at Los Dientes del Diablo" class="responsive-img">
                     <figcaption>Los Dientes del Diablo</figcaption>
                     <p class="difficulty">Difficulty: Advanced</p>
                 </figure>
