--- a/wwr/about.html
+++ b/wwr/about.html
@@ -40,16 +40,18 @@
 
         <section class="history card-section" aria-labelledby="history-heading">
             <h2 id="history-heading">Our History</h2>
-            <div class="history-content grid-2">
-                <div class="history-text">
-                    <p>From our humble beginnings in 1998, when a group of river-loving friends decided to share their passion for white water, White Water Rafting Co. has grown to become a benchmark in rafting adventures. What started with a single raft and the dream of exploring every rapid of the Salto River quickly transformed into a company dedicated</p>
+            <div class="history-content">
+                <div class="column left-text">
+                    <p>From our humble beginnings in 1998, when a group of river-loving friends decided to share their passion for white water, White Water Rafting Co. has grown to become a benchmark in rafting adventures. What started with a single raft and the dream of exploring every rapid of the Salto River quickly transformed into a company dedicated to offering unforgettable experiences. </p>
                 </div>
+
                 <figure class="history-image">
                     <img src="images/history.jpeg" alt="Our original rafting team in 1998" class="circle-img responsive-img">
                     <figcaption>Our founding team in 1998</figcaption>
                 </figure>
-                <div class="history-text">
-                    <p>to offering unforgettable experiences. Over the years, we've expanded our fleet, trained expert guides, and discovered new routes, while maintaining our commitment to safety, thrill, and respect for nature. We create lifelong memories for every adventurer who joins us.</p>
+
+                <div class="column right-text">
+                    <p>Over the years, we've expanded our fleet, trained expert guides, and discovered new routes, while maintaining our commitment to safety, thrill, and respect for nature. We create lifelong memories for every adventurer who joins us.</p>
                 </div>
             </div>
         </section>
