Improve css and html using DRY

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -38,8 +38,8 @@
             </article>
         </div>
 
-        <section class="history card-section" aria-labelledby="history-heading">
-            <h2 id="history-heading">Our History</h2>
+        <section class="history card" aria-labelledby="history-heading">
+            <h2 id="history-heading" class="card-title">Our History</h2>
             <div class="history-content">
                 <div class="column left-text">
                     <p>From our humble beginnings in 1998, when a group of river-loving friends decided to share their passion for white water, White Water Rafting Co. has grown to become a benchmark in rafting adventures. What started with a single raft and the dream of exploring every rapid of the Salto River quickly transformed into a company dedicated to offering unforgettable experiences. </p>
@@ -57,29 +57,29 @@
         </section>
 
         <section class="adventures" aria-labelledby="adventures-heading">
-            <h2 id="adventures-heading">Adventure Awaits You!</h2>
-            <div class="adventure-grid grid-auto">
-                <figure class="adventure-item">
+            <h2 id="adventures-heading" class="section-title">Adventure Awaits You!</h2>
+            <div class="grid-auto-fit">
+                <figure class="item-card adventure-item">
                     <img src="images/rafting1.jpg" alt="Exciting rapids at Los Dientes del Diablo" class="responsive-img">
                     <figcaption>Los Dientes del Diablo</figcaption>
                     <p class="difficulty">Difficulty: Advanced</p>
                 </figure>
-                <figure class="adventure-item">
+                <figure class="item-card adventure-item">
                     <img src="images/rafting2.jpg" alt="Team navigating Big Mallard rapids" width="300" height="200">
                     <figcaption>Big Mallard</figcaption>
                     <p class="difficulty">Difficulty: Intermediate</p>
                 </figure>
-                <figure class="adventure-item">
+                <figure class="item-card adventure-item">
                     <img src="images/rafting3.jpg" alt="Family enjoying half day adventure" width="300" height="200">
                     <figcaption>Half Day Adventure</figcaption>
                     <p class="difficulty">Difficulty: Beginner</p>
                 </figure>
-                <figure class="adventure-item">
+                <figure class="item-card adventure-item">
                     <img src="images/rafting4.jpg" alt="Thrilling rapids challenge course" width="300" height="200">
                     <figcaption>Rapids Challenge</figcaption>
                     <p class="difficulty">Difficulty: Expert</p>
                 </figure>
-                <figure class="adventure-item">
+                <figure class="item-card adventure-item">
                     <img src="images/rafting5.jpg" alt="Scenic canyon exploration route" width="300" height="200">
                     <figcaption>Canyon Explorer</figcaption>
                     <p class="difficulty">Difficulty: Intermediate</p>
