--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -39,8 +39,8 @@
             </article>
         </div>
 
-        <section class="contact-info card-section" aria-labelledby="contact-heading">
-            <h2 id="contact-heading">Get In Touch</h2>
+        <section class="contact-info card" aria-labelledby="contact-heading">
+            <h2 id="contact-heading" class="card-title">Get In Touch</h2>
             <div class="contact-details grid-2">
                 <div class="company-info">
                     <h3>Company Information</h3>
@@ -67,23 +67,23 @@
         </section>
 
         <section class="employees" aria-labelledby="employees-heading">
-            <h2 id="employees-heading">Meet Our Team</h2>
-            <div class="employee-grid grid-2">
-                <figure class="employee-item">
+            <h2 id="employees-heading" class="section-title">Meet Our Team</h2>
+            <div class="grid-auto-fit">
+                <figure class="item-card employee-item">
                     <img src="images/employee1.png" alt="Sarah Johnson, Lead Guide" width="200" height="200" class="circle-img">
                     <figcaption>
                         <strong>Sarah Johnson</strong><br>
                         Lead Rafting Guide
                     </figcaption>
                 </figure>
-                <figure class="employee-item">
+                <figure class="item-card employee-item">
                     <img src="images/employee2.png" alt="Mike Rodriguez, Safety Coordinator" width="200" height="200" class="circle-img">
                     <figcaption>
                         <strong>Mike Rodriguez</strong><br>
                         Safety Coordinator
                     </figcaption>
                 </figure>
-                <figure class="employee-item">
+                <figure class="item-card employee-item">
                     <img src="images/employee3.png" alt="Emma Chen, Customer Service Manager" width="200" height="200" class="circle-img">
                     <figcaption>
                         <strong>Emma Chen</strong><br>
@@ -93,8 +93,8 @@
             </div>
         </section>
 
-        <section class="contact-form card-section" aria-labelledby="form-heading">
-            <h2 id="form-heading">Send Us a Message</h2>
+        <section class="contact-form card" aria-labelledby="form-heading">
+        <h2 id="form-heading" class="card-title">Send Us a Message</h2>
             <form method="post" action="/submit-contact">
                 <div class="form-group">
                     <label for="full-name">Full Name:</label>
