--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -91,7 +91,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 White Water Rafting Co. | <a href="site-plan-rafting.html">Site Plan</a> | <a href="trips-wireframe.png">Trips Wireframe</a> | Zureyma Quetzaili Manrique Santiago</p>
+        <p>&copy; 2025 White Water Rafting Co. | <a href="site-plan-rafting.html">Site Plan</a> | <a href="images\trips-wireframe.png">Trips Wireframe</a> | Zureyma Quetzaili Manrique Santiago</p>
         <nav class="socialmedia" aria-label="Social media links">
             <ul>
                 <li><a href="https://facebook.com" aria-label="Facebook"><img src="images/facebook.png" alt="Facebook icon" width="32" height="32"></a></li>
